--- a/bibl.bib
+++ b/bibl.bib
@@ -414,6 +414,17 @@ published papers
 	doi			= "10.1016/j.geb.2006.03.003",
 }
 
+@article{BulowKlemperer1996,
+	author		= "Jeremy Bulow and Paul Klemperer",
+	year		= "1996",
+	title		= "Auctions versus negotiations",
+	journaltitle= aer,
+	volume		= "86",
+	number		= "1",
+	pages		= "180--194",
+	langid		= "american",
+}
+
 @article{CampbellEdererSpinnewijn2014,
 	author		= "Arthur Campbell and Florian Ederer and Johannes Spinnewijn",
 	year		= "2014",
@@ -437,6 +448,19 @@ published papers
 	pages		= "104--133",
 	langid		= "american",
 	doi			= "10.1016/j.jet.2012.12.014",
+}
+
+@article{CheKimMierendorff2013,
+	author		= "Yeon-Koo Che and Jinwoo Kim and Konrad Mierendorff",
+	year		= "2013",
+	title		= "Generalized reduced-form auctions",
+	subtitle	= "A network-flow approach",
+	journaltitle= ecta,
+	volume		= "81",
+	number		= "6",
+	pages		= "2487--2520",
+	langid		= "american",
+	doi			= "10.3982/ECTA11405",
 }
 
 @article{Chetty2006,
@@ -463,6 +487,30 @@ published papers
 	doi			= "10.1086/466731",
 }
 
+@article{Condorelli2012,
+	author		= "Daniele Condorelli",
+	year		= "2012",
+	title		= "What money can't buy",
+	subtitle	= "Efficient mechanism design with costly signals",
+	journaltitle= geb,
+	volume		= "75",
+	number		= "2",
+	pages		= "613--624",
+	langid		= "american",
+	doi			= "10.1016/j.geb.2012.02.018",
+}
+
+@article{Condorelli2013,
+	author		= "Daniele Condorelli",
+	year		= "2013",
+	title		= "Market and non-market mechanisms for the optimal allocation of scarce resources",
+	journaltitle= geb,
+	volume		= "82",
+	pages		= "582--591",
+	langid		= "american",
+	doi			= "10.1016/j.geb.2013.08.008",
+}
+
 @article{CourtyLi2000,
 	author		= "Pascal Courty and Hao Li",
 	year		= "2000",
@@ -473,6 +521,18 @@ published papers
 	pages		= "697--717",
 	langid		= "american",
 	doi			= "10.1111/1467-937X.00150",
+}
+
+@article{CremerMclean1985,
+	author		= "Jacques Crémer and Richard P. Mc{L}ean",
+	year		= "1985",
+	title		= "Optimal selling strategies under uncertainty for a discriminating monopolist when demands are interdependent",
+	journaltitle= ecta,
+	volume		= "53",
+	number		= "2",
+	pages		= "345--361",
+	langid		= "american",
+	doi			= "10.2307/1911240",
 }
 
 @article{CremerMclean1988,
@@ -548,6 +608,18 @@ published papers
 	doi			= "10.1093/restud/rdy073",
 }
 
+@article{DworczakKominersAkbarpour2021,
+	author		= "Piotr Dworczak and Scott Duke Kominers and Mohammad Akbarpour",
+	year		= "2021",
+	title		= "Redistribution through markets",
+	journaltitle= ecta,
+	volume		= "89",
+	number		= "4",
+	page		= "1665--1698",
+	langid		= "american",
+	doi			= "10.3982/ECTA16671",
+}
+
 @article{Dye1985,
 	author		= "Ronald A. Dye",
 	year		= "1985",
@@ -593,6 +665,18 @@ published papers
 	pages		= "923--954",
 	langid		= "american",
 	doi			= "10.3982/TE3101",
+}
+
+@article{Eso2005,
+	author		= "Péter Es\H{o}",
+	year		= "2005",
+	title		= "An optimal auction with correlated values and risk aversion",
+	journaltitle= jet,
+	volume		= "125",
+	number		= "1",
+	pages		= "78--89",
+	langid		= "american",
+	doi			= "10.1016/j.jet.2004.06.005",
 }
 
 @article{EsoSzentes2007rand,
@@ -973,6 +1057,17 @@ published papers
 	doi			= "10.1257/aer.20150913",
 }
 
+@article{HartNisan2017,
+	author		= "Sergiu Hart and Noam Nisan",
+	year		= "2017",
+	title		= "Approximate revenue maximization with multiple items",
+	journaltitle= jet,
+	volume		= "172",
+	pages		= "313--347",
+	langid		= "american",
+	doi			= "10.1016/j.jet.2017.09.001",
+}
+
 @article{HartReny2015,
 	author		= "Sergiu Hart and Philip J. Reny",
 	year		= "2015",
@@ -986,6 +1081,18 @@ published papers
 	doi			= "10.3982/TE1517",
 }
 
+@article{HartReny2015border,
+	author		= "Sergiu Hart and Philip J. Reny",
+	year		= "2015",
+	title		= "Implementation of reduced form mechanisms",
+	subtitle	= "A simple approach and a new characterization",
+	journaltitle= "Economic Theory Bulletin",
+	volume		= "3",
+	pages		= "1--8",
+	langid		= "american",
+	doi			= "10.1007/s40505-014-0055-3",
+}
+
 @article{HopenhaynNicolini1997,
 	author		= "Hugo A. Hopenhayn and Juan Pablo Nicolini",
 	year		= "1997",
@@ -996,6 +1103,18 @@ published papers
 	pages		= "412--438",
 	langid		= "american",
 	doi			= "10.1086/262078",
+}
+
+@article{Hotelling1932,
+	author		= "Harold Hotelling",
+	year		= "1932",
+	title		= "Edgeworth's taxation paradox and the nature of demand and supply functions",
+	journaltitle= jpe,
+	volume		= "40",
+	number		= "5",
+	pages		= "577--616",
+	langid		= "american",
+	doi			= "10.1086/254387",
 }
 
 @article{JacksonSonnenschein2007,
@@ -1058,6 +1177,18 @@ published papers
 	doi			= "10.3982/TE723",
 }
 
+@article{Kirkegaard2006,
+	author		= "René Kirkegaard",
+	year		= "2006",
+	title		= "A short proof of the {B}ulow--{K}lemperer auctions vs. negotiations result
+",
+	journaltitle= "Economic Theory",
+	volume		= "28",
+	pages		= "449--452",
+	langid		= "american",
+	doi			= "10.1007/s00199-004-0593-2",
+}
+
 @article{KoesslerPerezrichet2019,
 	author		= "Fréderic Koessler and Eduardo Perez-Richet",
 	year		= "2019",
@@ -1107,6 +1238,42 @@ published papers
 	doi			= "10.3982/ECTA18312",
 }
 
+@article{LaffontMartimort2000,
+	author		= "Jean-Jacques Laffont and David Martimort",
+	year		= "2000",
+	title		= "Mechanism design with collusion and correlation",
+	journaltitle= ecta,
+	volume		= "68",
+	number		= "2",
+	pages		= "309--342",
+	langid		= "american",
+	doi			= "10.1111/1468-0262.00111",
+}
+
+@article{Lai1974,
+	author		= "Tze Leung Lai",
+	year		= "1974",
+	title		= "Summability methods for independent identically distributed random variables",
+	journaltitle= "Proceedings of the American Mathematical Society",
+	volume		= "45",
+	number		= "2",
+	pages		= "253--261",
+	langid		= "american",
+	doi			= "10.1090/S0002-9939-1974-0356194-4",
+}
+
+@article{LewisSappington2000,
+	author		= "Tracy R. Lewis and David E. M. Sappington",
+	year		= "2000",
+	title		= "Contracting with wealth-constrained agents",
+	journaltitle= ier,
+	volume		= "41",
+	number		= "3",
+	pages		= "743--767",
+	langid		= "american",
+	doi			= "10.1111/1468-2354.00082",
+}
+
 @article{LiMatouschekPowell2017,
 	author		= "Jin Li and Niko Matouschek and Michael Powell",
 	year		= "2017",
@@ -1141,16 +1308,26 @@ published papers
 	doi			= "10.1016/j.jet.2020.105040",
 }
 
-@article{LewisSappington2000,
-	author		= "Tracy R. Lewis and David E. M. Sappington",
-	year		= "2000",
-	title		= "Contracting with wealth-constrained agents",
-	journaltitle= ier,
-	volume		= "41",
+@article{LoertscherMuir2022,
+	author		= "Simon Loertscher and Ellen V. Muir",
+	year		= "2022",
+	title		= "Monopoly pricing, optimal randomization, and resale",
+	journaltitle= jpe,
+	volume		= "130",
 	number		= "3",
-	pages		= "743--767",
+	page		= "566--635",
 	langid		= "american",
-	doi			= "10.1111/1468-2354.00082",
+	doi			= "10.1086/717894",
+}
+
+@article{LopomoRigottiShannon2022,
+	author		= "Giuseppe Lopomo and Luca Rigotti and Chris Shannon",
+	year		= "2022",
+	title		= "Detectability, duality, and surplus extraction",
+	journaltitle= jet,
+	volume		= "204",
+	langid		= "american",
+	doi			= "10.1016/j.jet.2022.105465",
 }
 
 @article{ManelliVincent2010,
@@ -1346,6 +1523,18 @@ published papers
 	doi			= "10.1257/aer.20140494",
 }
 
+@article{Neeman2004,
+	author		= "Zvika Neeman",
+	year		= "2004",
+	title		= "The relevance of private information in mechanism design",
+	journaltitle= jet,
+	volume		= "117",
+	number		= "1",
+	pages		= "55--77",
+	langid		= "american",
+	doi			= "10.1016/j.jet.2003.09.001",
+}
+
 @article{NockeWhinston2010,
 	author		= "Volker Nocke and Michael D. Whinston",
 	year		= "2010",
@@ -1443,6 +1632,18 @@ published papers
 	doi			= "10.1111/j.1467-937X.2007.00422.x",
 }
 
+@article{Robert1991,
+	author		= "Jacques Robert",
+	year		= "1991",
+	title		= "Continuity in auction design",
+	journaltitle= jet,
+	volume		= "55",
+	number		= "1",
+	pages		= "169--179",
+	langid		= "american",
+	doi			= "10.1016/0022-0531(91)90064-B",
+}
+
 @article{Rochet1985,
 	author		= "Jean-Charles Rochet",
 	year		= "1985",
@@ -1465,6 +1666,18 @@ published papers
 	pages		= "191--200",
 	langid		= "american",
 	doi			= "10.1016/0304-4068(87)90007-3",
+}
+
+@article{Roy1947,
+	author		= "René Roy",
+	year		= "1947",
+	title		= "La distribution du revenu entre les divers biens",
+	journaltitle= ecta,
+	volume		= "15",
+	number		= "3",
+	pages		= "205--225",
+	langid		= "american",
+	doi			= "10.2307/1905479",
 }
 
 @article{Ryff1967,
@@ -1577,6 +1790,18 @@ published papers
 	doi			= "10.1016/0022-0531(90)90023-D",
 }
 
+@article{Toikka2011,
+	author		= "Juuso Toikka",
+	year		= "2011",
+	title		= "Ironing without control",
+	journaltitle= jet,
+	volume		= "146",
+	number		= "6",
+	pages		= "2510--2526",
+	langid		= "american",
+	doi			= "10.1016/j.jet.2011.06.003",
+}
+
 @article{Townsend1982,
 	author		= "Robert M. Townsend",
 	year		= "1982",
@@ -1610,6 +1835,19 @@ published papers
 	pages		= "1233--1275",
 	langid		= "american",
 	doi			= "10.3982/ECTA7706",
+}
+
+@article{Yang2022,
+	author		= "Kai Hao Yang",
+	year		= "2022",
+	title		= "Selling consumer data for profit",
+	subtitle	= "Optimal market-segmentation design and its consequences",
+	journaltitle= aer,
+	volume		= "112",
+	number		= "4",
+	pages		= "1364--1393",
+	langid		= "american",
+	doi			= "10.1257/aer.20210616",
 }
 
 
@@ -1724,6 +1962,14 @@ working papers
 	langid		= "american",
 }
 
+@unpublished{HaghpanahKuvalekarLipnowski2022,
+	author		= "Nima Haghpanah and Aditya Kuvalekar and Elliot Lipnowski",
+	year		= "2022",
+	title		= "Selling to a group",
+	note		= "working paper, 28 June 2022",
+	langid		= "american",
+}
+
 @unpublished{Ishii2016,
 	author		= "Yuhta Ishii",
 	year		= "2016",
@@ -1750,6 +1996,13 @@ working papers
 	langid		= "american",
 }
 
+@unpublished{JewittQuigleyInprogress,
+	author		= "Ian Jewitt and Daniel Quigley",
+	year		= "in progress",
+	title		= "Conjugate persuasion",
+	langid		= "american",
+}
+
 @unpublished{Kattwinkel2019,
 	author		= "Deniz Kattwinkel",
 	year		= "2019",
@@ -1768,6 +2021,14 @@ working papers
 	note		= "working paper, 21 Jun 2022",
 	langid		= "american",
 	doi			= "10.1086/721618",
+}
+
+@unpublished{Laohakunakorn2019,
+	author		= "Krittanai Laohakunakorn",
+	year		= "2019",
+	title		= "Rent extraction with information acquisition",
+	note		= "working paper, 30 Dec 2019",
+	langid		= "american",
 }
 
 @unpublished{Liu2015,
@@ -1799,6 +2060,14 @@ working papers
 	year		= "2001",
 	title		= "Trading favors",
 	note		= "working paper, May 2001",
+	langid		= "american",
+}
+
+@unpublished{OnuchicRay2022iron,
+	author		= "Paula Onuchic and Debraj Ray",
+	year		= "2022",
+	title		= "Conveying value via categories",
+	note		= "working paper, Oct 2022",
 	langid		= "american",
 }
 
@@ -2010,6 +2279,16 @@ books
 	langid		= "american",
 }
 
+@book{MascolellWhinstonGreen1995,
+	author		= "Andreu Mas-Colell and Michael Whinston and Jerry R. Green",
+	year		= "1995",
+	title		= "Microeconomic theory",
+	edition		= "",
+	publisher	= oup,
+	address		= "Oxford",
+	langid		= "american",
+}
+
 @book{NariciBeckenstein2011,
 	author		= "Lawrence Narici and Edward Beckenstein",
 	year		= "2011",
@@ -2071,6 +2350,16 @@ books
 	langid		= "american",
 }
 
+@book{Samuelson1947,
+	author		= "Paul A. Samuelson",
+	year		= "1947",
+	title		= "Foundations of economic analysis",
+	edition		= "",
+	publisher	= hup,
+	address		= "Cambridge, MA",
+	langid		= "american",
+}
+
 @book{SeierstadSydsaeter1987,
 	author		= "Atle Seierstad and Knut Sydsæter",
 	year		= "1987",
@@ -2078,6 +2367,16 @@ books
 	edition		= "",
 	publisher	= "North-Holland",
 	address		= "Amsterdam",
+	langid		= "american",
+}
+
+@book{Shephard1953,
+	author		= "Ronald William Shephard",
+	year		= "1953",
+	title		= "Cost and production functions",
+	edition		= "",
+	publisher	= pup,
+	address		= "Princeton, NJ",
 	langid		= "american",
 }
 
