--- a/ch4.tex
+++ b/ch4.tex
@@ -491,7 +491,7 @@ There are two dynamic papers in this literature: \textcite{BirdFrug2019,sfb}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{iid availability, simple payoffs, budget constraint}
+\subsection{IID availability, simple payoffs, budget constraint}
 \label{sec:ch4:dynamics:birdfrug}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -505,7 +505,7 @@ in other words, she can increase the agent's utility by $r \geq 0$ at a cost of 
 A natural interpretation is that $r \geq 0$ reflects a monetary transfer to the agent. (The authors have a more complicated interpretation in terms of randomly-arriving `reward opportunities'.)
 
 The model is dynamic, and the players have the same discount factor $\delta \in (0,1)$. In each period, the allocation $(u,v)$ may or may not be available; the agent knows whether it is, and the principal does not.
-Availability is iid over time.
+Availability is IID over time.
 The principal can commit to future rewards (and approval).
 
 As stated, the principal's problem is straightforward:
