--- a/ms.tex
+++ b/ms.tex
@@ -67,7 +67,7 @@
 \author{Ludvig Sinander \\
 University of Oxford}
 
-\date{\small This version: 19 August 2022}
+\date{\small This version: 7 November 2022}
 
 % \date{\emph{version:} {\datestyle\today} at {\currenttime} \\ \hspace{0pt} \\ \hspace{0pt} \\ \bfseries please report typos!}
 
@@ -124,7 +124,7 @@ Visit \href{https://www.gnu.org/licenses/copyleft}{gnu.org/licenses/copyleft} to
 
 These are the notes for a second-year graduate course that I taught at Oxford in the autumns of 2021 and 2022.
 Thanks to Gregorio Curello, Deniz Kattwinkel, Elliot Lipnowski, Qingmin Liu, Alex Teytelboym and to my students for comments, suggestions and insights,
-and to Catharina Behrens, Josh le Cornu, Tanxin Gao, Sanjari Kalantri, Marie Kaul, Arvo Munoz Moran, Filip Tokarski and Yidan Xu for reporting errors.
+and to Catharina Behrens, Josh le Cornu, Tanxin Gao, Brooklyn Han, Simon Handreke, Sanjari Kalantri, Marie Kaul, Arvo Munoz Moran, Filip Tokarski, Gautam Vyas and Yidan Xu for reporting errors.
 
 
 
@@ -187,7 +187,7 @@ Much of the recent literature looks at settings in which monetary transfers are 
 
 A key feature of most work on mechanism design (and on incentive design more broadly) is that the principal is given the power to \emph{commit.}
 In particular, she chooses a `mechanism' (or contract, or set of institutions), which specifies payoff-relevant outcomes as a function of how the agent(s) behave.
-Once agent(s) have taken their actions, the principal cannot re-optimise by choosing actions different from those specified by the mechanism: her previous (contingent) choice binds her.
+Once agent(s) have taken their actions, the principal cannot re-optimise by choosing outcomes different from those specified by the mechanism: her previous (contingent) choice binds her.
 There is also a large body of work asking how incentive design changes when commitment is relaxed.
 
 This course will sample various aspects of modern mechanism design.
@@ -213,15 +213,15 @@ Along the way, we'll encounter a number of perspectives, tools, tricks and insig
 % the envelope theorem \parencite{MilgromSegal2002,Sinander2022};
 % Spence--Mirrlees characterisation of IC;
 % the optimality of posting a price \parencite{Myerson1981};
-% selling several goods \parencite[focus on examples from][]{HartReny2015}.
+% selling several goods \parencite[focus on examples from][]{HartReny2015};
+% incentives via side bets \parencite{CremerMclean1985,CremerMclean1988,McafeeReny1992}.
 
 
 
 %%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%
-\chapter{Allocating among several agents, (mostly) without money}
-\chaptermark{Allocating among several agents}
+\chapter{Allocating among several agents}
 \label{ch2}
 %%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%
